<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Solitaire</string>
    <string name="app_name_long">Privacy Friendly Solitaire</string>
    <string name="app_prefix" translatable="false">Privacy Friendly</string>

    <!-- ###DRAWER###-->
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_main">Main</string>
    <string name="action_game">Game</string>


    <!-- from here on: may not be used, later decide which is needed! -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- ###MAIN### -->
    <string name="main_button_text">Full Width Button</string>
    <string name="main_button_disabled_text">Inactive Button</string>
    <string name="main_button_1">1</string>
    <string name="main_button_2">2</string>
    <string name="main_button_3">3</string>
    <string name="main_button_4">4</string>
    <string name="main_button_5">5</string>
    <string name="main_text_fullwithbutton_desc">A button that uses the full width of the screen looks like this:</string>
    <string name="main_text_disabledbutton_desc">A disabled button looks like this (any size):</string>
    <string name="main_text_title">This is an example app to demonstrate the design of a Privacy Friendly App. Further explanations can be found in the Privacy Friendly App Guide.</string>
    <string name="main_text_normalbutton_desc">There are multiple ways to display basic buttons. Button 1 is the basic button. If you wish to separate a button visually, use button 2. The buttons 3&#8211;5 are examples for highlighted buttons. Depending on the app other colors are possible.</string>
    <string name="main_button_welcomedialog_text">Use the button in the lower left corner to call the Welcome Dialog.</string>

    <!-- ###GAME###-->
    <string name="title_activity_game">Game</string>
    <string name="game_button_start">New Game</string>
    <string name="game_button_continue">Continue Game</string>
    <string name="game_desc">This is the default main menu for game apps. The viewpager above should be used to switch between game modes.</string>
    <string name="game_points">Points</string>

    <!--###HELP###-->

    <string name="sel_card">Ausgewählte Karte</string>
    <string name="sel_card_summary">Eine ausgewählte Karte im Spiel wird durch einen gelben Rand um die Karte veranschaulicht</string>

    <string name="rules">Spielregeln</string>
    <string name="rules_description">Es werden sieben verdeckte Kartenstapel (Tableaus) von links nach rechts nebeneinandergelegt. Die obersten Karten der Tableaus werden umgedreht.
        \n Um Solitär zu gewinnen, müssen alle Karten in aufsteigender Reihenfolge (beginnend mit dem Ass, dann 2, 3 usw.) und nach Farben (Karo, Herz, Pik, Kreuz) sortiert auf die vier horizontal markierten Plätze (Foundations) abgelegt werden. Das Spiel ist gewonnen, wenn alle Karten auf den passenden Foundations liegen, oder verloren, wenn es keine Zugmöglichkeiten mehr gibt bzw. der Spieler aufgibt.
        \n Dazu können Karten auf den Tableaus abgelegt und verschoben werden oder direkt auf einer der vier Foundations abgelegt werden. Die Karten dürfen auf den sieben Tableaus in absteigender Reihenfolge angelegt werden, allerdings nur im Wechsel von rot und schwarz. Wird die letzte offene Karte von einem Tableau bewegt, so wird die oberste verdeckte Karte des Tableaus aufgedeckt. Ein leerer Tableauplatz kann nur durch einen König besetzt werden.
        \n Im Spielmodus Standard darf das Deck beliebig oft zurückgesetzt und erneut aufgedeckt werden. Im Spielmodus Vegas ist das Zurücksetzen des Decks nicht möglich.
        \n Die Karten des Decks werden je nach Einstellung eine nach der anderen oder drei Karten gleichzeitig aufgedeckt und auf den Waste gelegt.
        </string>

    <string name="rules_point">Punktezählen bei Solitaire</string>
    <string name="rules_point_desc">Es sind zwei Varianten des Punktezählens auswählbar: Standard oder Vegas.
        Im Standard Modus sind die Regeln wie folgt: \n</string>

    <string name="rules_point_desc_vegas">\n Bei der Variante Vegas beginnt der Spieler mit -52$. Für das Ablegen einer Karte auf einer Foundation, erhält er 5$ zurück. Das Deck darf nur einmal komplett auf dem Waste abgelegt werden, danach ist das Spiel beendet.</string>



    <string name="help">Help</string>
    <string name="help_general_heading">Overview</string>
    <string name="help_feature_heading">Features</string>
    <string name="help_privacy_heading">Privacy</string>


    <string name="help_undo">Undo</string>
    <string name="help_undo_summary">Den letzten Zug rückgängig machen</string>

    <string name="help_redo">Redo</string>
    <string name="help_redo_summary">Den letzten Zug wiederholen</string>

    <string name="help_foundation">Automatisches Ablegen</string>
    <string name="help_foundation_summary">Mögliche Karten mittels Shütteln automatisch auf die zugehörigen Foundations ablegen</string>

    <string name="help_hint">Hinweis</string>
    <string name="help_hint_summary">Hinweis für einen möglichen Zug </string>


    <string name="help_whatis">What is Privacy Friendly App Solitaire?</string>
    <string name="help_whatis_answer">Privacy Friendly App Solitaire is an app that demonstrates the design of a Privacy Friendly App.</string>
    <string name="help_feature_one">Feature 1</string>
    <string name="help_feature_one_answer">Description of first feature.</string>
    <string name="help_privacy">What makes the app privacy-friendly?</string>
    <string name="help_privacy_answer">Privacy Friendly App Solitaire does not require any permission. It further does not include any tracking mechanisms or advertisement.</string>
    <string name="help_permission">Permissions</string>
    <string name="help_permission_answer">Privacy Friendly App Solitaire does not require any permission.</string>
    <string name="help_intro">This app shows the basic design of Privacy Friendly Apps. The functionality of the app should be introduced with 1 to 2 sentences in this section.</string>







    <!--###RULES###-->
    <string name="title_activity_rules">Rules</string>
    <string name="explanation_rules">Beschreibe hier die Spielregeln</string>








    <!--###ABOUT###-->
    <string name="about">About</string>
    <string name="version_number">Version 0.1</string>
    <string name="about_author">Authors: </string>
    <string name="about_author_names" translatable="false">Emine Saracoglu, Moritz Fischer, Isabella Dix</string>
    <string name="about_author_contributors">and contributors.</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="privacy_friendly">This application belongs to the group of Privacy Friendly Apps developed by Technische Universität Darmstadt. Sourcecode licensed under GPLv3. Images copyright TU Darmstadt and Google Inc.</string>
    <string name="more_info">More information can be found on:</string>
    <string name="github" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-solitaire">Github-Repo</a></string>
    <string name="url" translatable="false"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>

    <!-- ###SETTINGS### -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_sound_switch">Ton </string>
    <string name="pref_sound_switch_summary_on">Ton ausschalten</string>
    <string name="pref_sound_switch_summary_off">Ton anschalten</string>

    <string name="pref_shake_switch">Schüttelfunktion </string>
    <string name="pref_shake_switch_summary_on">An</string>
    <string name="pref_shake_switch_summary_off">Aus</string>

    <string name="pref_language">Sprachauswahl</string>
    <string name="pref_language_summary_on">Englisch</string>
    <string name="pref_language_summary_off">Deutsch</string>

    <string name="pref_count_point">Punkte</string>
    <string name="pref_point_summary_off">Stantard</string>
    <string name="pref_point_summary_on">Vegas</string>

    <string name="pref_waste">Karte ziehen</string>
    <string name="pref_waste_summary_off">Eine Karte</string>
    <string name="pref_waste_summary_on">Drei Karten</string>


    <!-- Backgroundcolor-->
    <string name="sp_key_background_color">Hintergrundfarbe</string>
    <string name="summary_backroundcolor">Wählen Sie die Hintergrundfarbe im Spielfeld</string>

    <string name="cyan">BLUE</string>
    <string name="green">GREEN</string>
    <string name="gray">GRAY</string>
    <string name="brown">BROWN</string>






    <string-array name="color_palete">
        <item name="color_p_green">GREEN</item>
        <item name="color_p_blue">BLUE</item>
        <item name="color_p_gray">GRAY</item>
        <item name="color_p_brown">BROWN</item>
    </string-array>


    <string-array name="color_palete_value">
        <item name="green">#228b22</item>
        <item name="blue">#00ffff</item>
        <item name="gray">#A8A8A8</item>
        <item name="brown">#d2b48c</item>
    </string-array>




    <!-- ### WELCOME DIALOG ### -->
    <!-- TODO: The welcome screen should introduce the app and the key elements of the start page.-->
    <string name="welcome_text"> This App is a basic Klondike Solitaire Game analogous to the known
        Windows Solitaire.
        \n\n
        The sourcecode is available at GitHub.\n\n</string>
    <string name="welcome">Welcome</string>
    <string name="okay">Okay</string>
    <string name="viewhelp">View Help</string>
    <string name="main_button_welcomedialog">Show Welcome</string>

</resources>
