<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/help">



        <Preference android:title="@string/rules"
            android:key="rule"
            android:layout="@layout/help_rules"
            android:selectable="true">
            <intent android:action="org.secuso.privacyfriendlyexample.RuleActivity" />
        </Preference>



           <Preference android:title="@string/help_undo"
               android:selectable="false"
               android:icon="@drawable/glyphicons_undo"
               android:summary="@string/help_undo_summary"/>

           <Preference android:title="@string/help_redo"
               android:selectable="false"
               android:icon="@drawable/glyphicons_redo"
               android:summary="@string/help_redo_summary"/>

           <Preference android:title="@string/help_foundation"
               android:selectable="false"
               android:icon="@drawable/glyphicons_shake"
               android:summary="@string/help_foundation_summary"/>

           <Preference android:title="@string/help_hint"
               android:selectable="false"
               android:icon="@drawable/glyphicons_robot"
               android:summary="@string/help_hint_summary"/>

        <Preference android:title="@string/sel_card"
            android:selectable="false"
            android:icon="@drawable/select_card"
            android:summary="@string/sel_card_summary"/>




    </PreferenceCategory>


       <PreferenceCategory android:title="@string/help_privacy_heading">

           <Preference
               android:summary="@string/help_permission_answer"
               android:title="@string/help_permission"/>
       </PreferenceCategory>

   </PreferenceScreen>