<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory>

        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_sound_switch"
            android:summaryOff="@string/pref_sound_switch_summary_off"
            android:summaryOn="@string/pref_sound_switch_summary_on"
            android:title="@string/pref_sound_switch" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_shake_switch"
            android:summaryOff="@string/pref_shake_switch_summary_off"
            android:summaryOn="@string/pref_shake_switch_summary_on"
            android:title="@string/pref_shake_switch" />


        <SwitchPreference
            android:key="@string/pref_count_point"
            android:summaryOff="@string/pref_point_summary_off"
            android:summaryOn="@string/pref_point_summary_on"
            android:title="@string/pref_count_point" />



        <SwitchPreference
            android:key="@string/pref_waste"
            android:summaryOff="@string/pref_waste_summary_off"
            android:summaryOn="@string/pref_waste_summary_on"
            android:title="@string/pref_waste" />

        <ListPreference
            android:entries="@array/color_palete"
            android:entryValues="@array/color_palete_value"
            android:key="@string/sp_key_background_color"
            android:title="@string/sp_key_background_color" />

        <ListPreference
            android:entries="@array/time_screen"
            android:entryValues="@array/time_screen_value"
            android:key="@string/pref_time"
            android:title="@string/pref_time"
            android:summary="@string/pref_time_summary"/>

    </PreferenceCategory>


</PreferenceScreen>