<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context=".Activities.RulesActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/rules" />


    <TextView
        android:text="@string/rules_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rules_description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/rules_point" />


    <TextView
        android:text="@string/rules_point_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rules_point_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/standard_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/standard_point_countung" />
    </LinearLayout>

    <TextView
        android:text="@string/rules_point_desc_vegas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rules_point_desc_vegas" />



</LinearLayout>


</ScrollView>
