<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory
        android:title="Einstellungen">

        <SwitchPreference
            android:id="@+id/pref_sound_switch"
            android:key="pref_sound_switch"
            android:title="@string/pref_sound_switch"
            android:summaryOn="@string/pref_sound_switch_summary_on"
            android:summaryOff="@string/pref_sound_switch_summary_off"
            android:defaultValue="false"/>
        <Preference android:title="Test Setting"
            android:summary="Text Summary"/>

        <ListPreference
            android:title="Sprache"
            android:summary="Wählen Sie die Sprache."
            android:key="languagePref"
            android:defaultValue="Deutsch"
            android:entries="@array/languageArray"
            android:entryValues="@array/languageValue" />


        <ListPreference
            android:title="Karten ziehen im Waste"
            android:summary="Karten ablegen auf dem Waste."
            android:key="cardPref"
            android:defaultValue="Eine Karte ziehen"
            android:entries="@array/cardArray"
            android:entryValues="@array/cardValue" />


        <ListPreference
            android:title="Punktezählen"
            android:summary="Punktezählvarianten"
            android:key="countPref"
            android:defaultValue="180"
            android:entries="@array/countArray"
            android:entryValues="@array/countValue" />

    </PreferenceCategory>

</PreferenceScreen>