<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1"
        tools:context=".Activities.BackgroundActivity">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="475dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context=".Activities.BackgroundActivity"
            >

            <RadioGroup
                android:layout_width="fill_parent"
                android:orientation="vertical"
                android:id="@+id/radio_group1"
                android:layout_centerHorizontal="true"
                android:layout_height="210dp">



                <RadioButton
                android:id="@+id/checkbox_green"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="@dimen/button_text_size"
                android:text="@string/green"
                android:textColor="@color/black"
                android:background="@color/forest"
                android:onClick="onCheckBoxClicked"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/radio_group1"
                />



            <RadioButton
                android:id="@+id/checkbox_blue"
                android:textSize="@dimen/button_text_size"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/cyan"
                android:textColor="@color/black"
                android:background="@color/cyan"
                android:onClick="onCheckBoxClicked"
                android:layout_below="@id/checkbox_green"
                />

            <RadioButton
                android:id="@+id/checkbox_grey"
                android:layout_height="wrap_content"
                android:textSize="@dimen/button_text_size"
                android:layout_width="match_parent"
                android:text="@string/gray"
                android:textColor="@color/black"
                android:background="@color/middlegrey"
                android:onClick="onCheckBoxClicked"
                android:layout_below="@id/checkbox_blue"
                />

                <RadioButton
                    android:id="@+id/checkbox_brown"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/button_text_size"
                    android:layout_width="match_parent"
                    android:text="@string/brown"
                    android:textColor="@color/black"
                    android:background="@color/brown"
                    android:onClick="onCheckBoxClicked"
                    android:layout_below="@id/checkbox_grey"
                    />

            </RadioGroup>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>
